--- a/index.html
+++ b/index.html
@@ -1,7 +1,61 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Roblox Code Crafters</title>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+</head>
+
+<body class="font-poppins-black text-white d-flex align-items-center justify-content-center">
+
+    <!-- Bootstrap Scripts -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha384-/6p1EvBhf3TDRzP2aLg0OJKIeQq1ZsP5QwFq70NG4j9BOZQIycEPIbPA2EAd9aBf"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtleeGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
+
+    <div class="container-fluid secondary-background">
+        <div class="row">
+            <div class="col-md-2 primary-background text-white font-poppins-black fs-4">
+                <!-- TODO: Add into Button which redirects to homepage -->
+                <h5><strong>Roblox</strong></h5>
+                <h5><strong>Code Crafters</strong></h5>
+            </div>
+            <div class="offset-md-5 col-md-4 d-flex align-items-center text-white font-poppins-black">
+                <div class="container-fluid">
+                    <div class="row m-0">
+                        <div class="col d-flex align-items-center rounded primary-background">
+                            <p class="m-0"><strong>Home</strong></p>
+                        </div>
+                        <div class="col d-flex align-items-center rounded border shadow">
+                            <p class="m-0"><strong>About</strong></p>
+                        </div>
+                        <div class="col d-flex align-items-center rounded border shadow">
+                            <p class="m-0"><strong>Course</strong></p>
+                        </div>
+                        <div class="col d-flex align-items-center rounded border shadow">
+                            <p class="m-0"><strong>Lessons</strong></p>
+                        </div>
+                        <div class="col d-flex align-items-center rounded border shadow">
+                            <p class="m-0"><strong>Portfolio</strong></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
