--- a/home.html
+++ b/home.html
@@ -18,17 +18,22 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#course">Course</a></li>
-                <li><a href="#lessons">Lessons</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="./">Home</a></li>
+                <li><a href="./about">About</a></li>
+                <li><a href="./course">Course</a></li>
+                <li><a href="./lessons">Lessons</a></li>
+                <li><a href="./contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <div class="primary-background">
-        <img src="Images/Common/CityBackground.jpg" style="width: 100%; height: 90%;">
+        <img src="Images/Common/CityBackground.jpg" class="image-main">
+        <div class="overlay">
+            <div class="primary-background">
+                <img src="Images/Common/Logo.png" class="image-logo">
+            </div>
+        </div>
     </div>
 </body>
 
