Adding main title

--- a/home.html
+++ b/home.html
@@ -29,10 +29,11 @@
 
     <div class="primary-background">
         <img src="Images/Common/CityBackground.jpg" class="image-main">
-        <div class="overlay">
-            <div class="primary-background">
-                <img src="Images/Common/Logo.png" class="image-logo">
-            </div>
+        <div class="overlay-logo primary-background">
+            <img src="Images/Common/Logo.png" class="image-logo">
+        </div>
+        <div class="overlay-title primary-background">
+            <h1>Learn Roblox Studio<br>from any Starting Level</h1>
         </div>
     </div>
 </body>
