CSS Improvements and Additions

--- a/home.html
+++ b/home.html
@@ -8,15 +8,14 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap">
     <link rel="stylesheet" href="styles.css">
-
 </head>
 
 <body>
-    <header>
-        <div class="primary-background">
+    <header class="bg-secondary">
+        <div class="section-header-sub bg-primary">
             <h1 class="main-title">Roblox<br>Code Crafters</h1>
         </div>
-        <nav>
+        <nav class="bg-secondary">
             <ul>
                 <li><a href="./">Home</a></li>
                 <li><a href="./about">About</a></li>
@@ -27,14 +26,35 @@
         </nav>
     </header>
 
-    <div class="primary-background">
-        <img src="Images/Common/CityBackground.jpg" class="image-main">
-        <div class="overlay-logo primary-background">
-            <img src="Images/Common/Logo.png" class="image-logo">
+    <div class="section-main">
+        <img src="Images/Common/CityBackground.jpg" class="bg">
+        <div class="section-header-sub overlay-top-left">
+            <img src="Images/Common/Logo.png" class="bg">
         </div>
-        <div class="overlay-title primary-background">
+        <div class="overlay-center">
             <h1>Learn Roblox Studio<br>from any Starting Level</h1>
         </div>
+    </div>
+
+    <div class="section-sub">
+        <div class="container-large-left">
+            <h2 class="section-title bg-secondary">About Me</h2>
+            <br>
+            <br>
+            <p>Hi, I'm Kurt from Code Crafters!</p>
+            <br>
+            <p>I am an 18 year old from the UK, who loves everything game development and coding. I created Code Crafters as a network of different resources to help people learn programming for the first time.</p>
+            <br>
+            <br>
+            <a href="./about" class="action-button">Read More ></a>
+        </div>
+        <div class="container-small-right">
+            <img src="Images/Home/Selfie.png" class="bg">
+        </div>
+    </div>
+
+    <div class="section-sub">
+        <img src="Images/Home/ForestBackground.png" class="bg">
     </div>
 </body>
 
