--- a/home.html
+++ b/home.html
@@ -37,20 +37,24 @@
     </div>
 
     <div class="section-sub">
-        <div class="container-large-left">
-            <h2 class="section-title bg-secondary">About Me</h2>
-            <br>
-            <br>
-            <p>Hi, I'm Kurt from Code Crafters!</p>
-            <br>
-            <p>I am an 18 year old from the UK, who loves everything game development and coding. I created Code Crafters as a network of different resources to help people learn programming for the first time.</p>
-            <br>
-            <br>
-            <a href="./about" class="action-button">Read More ></a>
-        </div>
-        <div class="container-small-right">
-            <img src="Images/Home/Selfie.png" class="bg">
-        </div>
+        <table>
+            <tr>
+                <td class="container-large">
+                    <h2 class="section-title bg-secondary">About Me</h2>
+                    <br>
+                    <br>
+                    <p>Hi, I'm Kurt from Code Crafters!</p>
+                    <br>
+                    <p>I am an 18 year old from the UK, who loves everything game development and coding. I created Code Crafters as a network of different resources to help people learn programming for the first time.</p>
+                    <br>
+                    <br>
+                    <a href="./about" class="action-button">Read More ></a>
+                </td>
+                <td class="container-small">
+                    <img src="Images/Home/Selfie.png" class="bg">
+                </td>
+            </tr>
+        </table>
     </div>
 
     <div class="section-sub">
@@ -58,48 +62,60 @@
     </div>
 
     <div class="section-sub">
-        <div class="container-mid-left">
-            <h2 class="section-title bg-secondary">Online Lessons</h2>
-            <br>
-            <br>
-            <p>My online lessons are a fast and enjoyable way to learn game development on Roblox Studio. Each lesson is completely personalised to your needs, with lots of practical examples and things for you to try out. These are great for anyone who prefers to learn 1-to-1 or requires help with a specific topic.</p>
-            <br>
-            <br>
-            <a href="./lessons" class="action-button">Find Out More ></a>
-        </div>
-        <div class="container-mid-right">
-            <img src="Images/Home/MicrophoneSetup.jpg" class="bg">
-        </div>
+        <table>
+            <tr>
+                <td class="container-medium">
+                    <h2 class="section-title bg-secondary">Online Lessons</h2>
+                    <br>
+                    <br>
+                    <p>My online lessons are a fast and enjoyable way to learn game development on Roblox Studio. Each lesson is completely personalised to your needs, with lots of practical examples and things for you to try out. These are great for anyone who prefers to learn 1-to-1 or requires help with a specific topic.</p>
+                    <br>
+                    <br>
+                    <a href="./lessons" class="action-button">Find Out More ></a>
+                </td>
+                <td class="container-medium">
+                    <img src="Images/Home/MicrophoneSetup.jpg" class="bg">
+                </td>
+            </tr>
+        </table>
     </div>
 
     <div class="section-sub">
-        <div class="container-mid-left">
-            <img src="Images/Home/ShooterGame.jpg" class="bg">
-        </div>
-        <div class="container-mid-right">
-            <h2 class="section-title bg-secondary">Masterclass Course</h2>
-            <br>
-            <br>
-            <p>My Complete Masterclass Course for Roblox Studio is a more affordable method of learning Roblox Studio. It will take you from a complete beginner to an advanced scripter with 25 hours worth of lectures along with countless quizzes, assignments and more. You will also learn how to use Blender and how to properly advertise and monetise your game to ensure success.</p>
-            <br>
-            <br>
-            <a href="./course" class="action-button">Find Out More ></a>
-        </div>
+        <table>
+            <tr>
+                <td class="container-medium">
+                    <img src="Images/Home/ShooterGame.jpg" class="bg">
+                </td>
+                <td class="container-medium">
+                    <h2 class="section-title bg-secondary">Masterclass Course</h2>
+                    <br>
+                    <br>
+                    <p>My Complete Masterclass Course for Roblox Studio is a more affordable method of learning Roblox Studio. It will take you from a complete beginner to an advanced scripter with 25 hours worth of lectures along with countless quizzes, assignments and more. You will also learn how to use Blender and how to properly advertise and monetise your game to ensure success.</p>
+                    <br>
+                    <br>
+                    <a href="./course" class="action-button">Find Out More ></a>
+                </td>
+            </tr>
+        </table>
     </div>
 
     <div class="section-sub">
-        <div class="container-mid-left">
-            <h2 class="section-title bg-secondary">Discord Server</h2>
-            <br>
-            <br>
-            <p>My Discord community is the perfect place to speak to other developers who are also learning Roblox Studio. The community includes a marketplace to hire people and get hired, frequent events, and free resources to help you learn. It's a great place to go if you get stuck or you want another developer to join your team.</p>
-            <br>
-            <br>
-            <a href="./lessons" class="action-button">Find Out More ></a>
-        </div>
-        <div class="container-mid-right">
-            <img src="Images/Home/DiscordBackground.jpg" class="bg">
-        </div>
+        <table>
+            <tr>
+                <td class="container-medium">
+                    <h2 class="section-title bg-secondary">Discord Server</h2>
+                    <br>
+                    <br>
+                    <p>My Discord community is the perfect place to speak to other developers who are also learning Roblox Studio. The community includes a marketplace to hire people and get hired, frequent events, and free resources to help you learn. It's a great place to go if you get stuck or you want another developer to join your team.</p>
+                    <br>
+                    <br>
+                    <a href="./lessons" class="action-button">Find Out More ></a>
+                </td>
+                <td class="container-medium">
+                    <img src="Images/Home/DiscordBackground.jpg" class="bg">
+                </td>
+            </tr>
+        </table>
     </div>
 
     <div class="section-sub">
