Moving test file into home

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roblox Code Crafters</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap">
@@ -11,50 +11,19 @@
 </head>
 
 <body>
-    <header class="bg-secondary">
-        <div class="section-header-sub bg-primary">
-            <h1 class="main-title">Roblox<br>Code Crafters</h1>
-        </div>
-        <nav class="bg-secondary">
-            <ul>
-                <li><a href="./">Home</a></li>
-                <li><a href="./about">About</a></li>
-                <li><a href="./course">Course</a></li>
-                <li><a href="./lessons">Lessons</a></li>
-                <li><a href="./contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <div class="section-main">
-        <img src="Images/Common/CityBackground.jpg" class="bg">
-        <div class="section-header-sub overlay-top-left">
-            <img src="Images/Common/Logo.png" class="bg">
+    <div class="section-sub-grid">
+        <div>
+            <h2 class="section-title bg-secondary">About Me</h2>
+            <br><br>
+            <p>Hi, I'm Kurt from Code Crafters!</p>
+            <br>
+            <p>I am an 18 year old from the UK, who loves everything game development and coding. I created Code Crafters as a network of different resources to help people learn programming for the first time.</p>
+            <br>
+            <a href="./about">Read More ></a>
         </div>
-        <div class="overlay-center">
-            <h1>Learn Roblox Studio<br>from any Starting Level</h1>
+        <div class="bg-image" style="background-image: url(Images/Home/Selfie.png);">
         </div>
-    </div>
-
-    <div class="section-sub">
-        <table>
-            <tr>
-                <td class="container-large">
-                    <h2 class="section-title bg-secondary">About Me</h2>
-                    <br>
-                    <br>
-                    <p>Hi, I'm Kurt from Code Crafters!</p>
-                    <br>
-                    <p>I am an 18 year old from the UK, who loves everything game development and coding. I created Code Crafters as a network of different resources to help people learn programming for the first time.</p>
-                    <br>
-                    <br>
-                    <a href="./about" class="action-button">Read More ></a>
-                </td>
-                <td class="container-small">
-                    <img src="Images/Home/Selfie.png" class="bg">
-                </td>
-            </tr>
-        </table>
     </div>
 
     <div class="section-sub">
