--- a/home.html
+++ b/home.html
@@ -12,23 +12,57 @@
 
 <body>
 
-    <div class="section-sub-grid">
+    <div class="section-sub grid-left">
         <div>
-            <h2 class="section-title bg-secondary">About Me</h2>
-            <br><br>
+            <h2>About Me</h2>
+            <br><br> <!-- TODO: Replace with padding-bottom -->
             <p>Hi, I'm Kurt from Code Crafters!</p>
-            <br>
+            <br> <!-- TODO: Replace with padding-bottom -->
             <p>I am an 18 year old from the UK, who loves everything game development and coding. I created Code Crafters as a network of different resources to help people learn programming for the first time.</p>
-            <br>
+            <br> <!-- TODO: Replace with padding-bottom -->
             <a href="./about">Read More ></a>
         </div>
-        <div class="bg-image" style="background-image: url(Images/Home/Selfie.png);">
+        <div class="bg-image" style="background-image: url(Images/Home/Selfie.png);"></div>
+    </div>
+
+    <div class="section-sub bg-image" style="background-image: url(Images/Home/ForestBackground.png);"></div>
+
+    <div class="section-sub grid">
+        <div>
+            <h2>Online Lessons</h2>
+            <br><br>
+            <p>My online lessons are a fast and enjoyable way to learn game development on Roblox Studio. Each lesson is completely personalised to your needs, with lots of practical examples and things for you to try out. These are great for anyone who prefers to learn 1-to-1 or requires help with a specific topic.</p>
+            <br>
+            <a href="./about">Find Out More ></a>
+        </div>
+        <div class="bg-image" style="background-image: url(Images/Home/MicrophoneSetup.jpg);"></div>
+    </div>
+
+    <div class="section-sub grid">
+        <div class="bg-image" style="background-image: url(Images/Home/ShooterGame.jpg);"></div>
+        <div>
+            <h2>Masterclass Course</h2>
+            <br><br>
+            <p>My Complete Masterclass Course for Roblox Studio is a more affordable method of learning Roblox Studio. It will take you from a complete beginner to an advanced scripter with 25 hours worth of lectures along with countless quizzes, assignments and more. You will also learn how to use Blender and how to properly advertise and monetise your game to ensure success. </p>
+            <br>
+            <a href="./about">Find Out More ></a>
         </div>
     </div>
 
-    <div class="section-sub">
-        <img src="Images/Home/ForestBackground.png" class="bg">
+    <div class="section-sub grid">
+        <div>
+            <h2>Discord Server</h2>
+            <br><br>
+            <p>My Discord community is the perfect place to speak to other developers who are also learning Roblox Studio. The community includes a marketplace to hire people and get hired, frequent events, and free resources to help you learn. It's a great place to go if you get stuck or you want another developer to join your team.</p>
+            <br>
+            <a href="./about">Find Out More ></a>
+        </div>
+        <div class="bg-image" style="background-image: url(Images/Home/DiscordBackground.jpg);"></div>
     </div>
+
+    <div class="section-sub bg-image" style="background-image: url(Images/Home/TownBackground.jpeg);"></div>
+
+    <div class="section-sub"></div>
 
 </body>
 
