Adding header and main section

--- a/home.html
+++ b/home.html
@@ -12,7 +12,24 @@
 
 <body>
 
-    <div class="section-sub grid-left">
+    <header class="grid-15-85">
+        <div class="bg-primary">
+            <h1>Roblox<br>Code Crafters</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="./">Home</a></li>
+                <li><a href="./about">About</a></li>
+                <li><a href="./course">Course</a></li>
+                <li><a href="./lessons">Lessons</a></li>
+                <li><a href="./contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="section-large bg-image" style="background-image: url(Images/Common/CityBackground.jpg);"></div>
+    
+    <div class="section grid-60-40">
         <div>
             <h2>About Me</h2>
             <p>Hi, I'm Kurt from Code Crafters!</p>
@@ -22,9 +39,9 @@
         <div class="bg-image" style="background-image: url(Images/Home/Selfie.png);"></div>
     </div>
 
-    <div class="section-sub bg-image" style="background-image: url(Images/Home/ForestBackground.png);"></div>
+    <div class="section bg-image" style="background-image: url(Images/Home/ForestBackground.png);"></div>
 
-    <div class="section-sub grid">
+    <div class="section grid-50-50">
         <div>
             <h2>Online Lessons</h2>
             <p>My online lessons are a fast and enjoyable way to learn game development on Roblox Studio. Each lesson is completely personalised to your needs, with lots of practical examples and things for you to try out. These are great for anyone who prefers to learn 1-to-1 or requires help with a specific topic.</p>
@@ -33,7 +50,7 @@
         <div class="bg-image" style="background-image: url(Images/Home/MicrophoneSetup.jpg);"></div>
     </div>
 
-    <div class="section-sub grid">
+    <div class="section grid-50-50">
         <div class="bg-image" style="background-image: url(Images/Home/ShooterGame.jpg);"></div>
         <div>
             <h2>Masterclass Course</h2>
@@ -42,7 +59,7 @@
         </div>
     </div>
 
-    <div class="section-sub grid">
+    <div class="section grid-50-50">
         <div>
             <h2>Discord Server</h2>
             <p>My Discord community is the perfect place to speak to other developers who are also learning Roblox Studio. The community includes a marketplace to hire people and get hired, frequent events, and free resources to help you learn. It's a great place to go if you get stuck or you want another developer to join your team.</p>
@@ -51,9 +68,9 @@
         <div class="bg-image" style="background-image: url(Images/Home/DiscordBackground.jpg);"></div>
     </div>
 
-    <div class="section-sub bg-image" style="background-image: url(Images/Home/TownBackground.jpeg);"></div>
+    <div class="section bg-image" style="background-image: url(Images/Home/TownBackground.jpeg);"></div>
 
-    <div class="section-sub"></div>
+    <div class="section"></div>
 
 </body>
 
